--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
 	"devDependencies": {
 		"@parcel/transformer-glsl": "^2.0.0",
 		"parcel": "^2.0.0"
+	},
+	"dependencies": {
+		"gifuct-js": "^2.1.1"
 	}
 }
